public/css/style.css
html {
}

body{
}



.panel-default {
     background-color: RGBA(75, 115, 121, 1);

}

.panel-thumbnail {
  height:133px;
  width:200px;
  margin-top:15px;
  margin-right: auto;
  margin-left: auto;
  
}

.panelStyle {
  padding: 10px;
  margin-right: auto;
  margin-left: auto;
  text-align: center;
  background-color: RGBA(75, 115, 121, 1);
  color: white;
  font-size: 12px;
}
.skipNav{
padding-top: 75px;
}

.labelLeft{
  float: left;
}

H1 {
  margin-top:15px;
}

H2 {
  margin-bottom: 15px;
}

H4 {
  margin-bottom: 15px;
/*  margin-top:10px;*/
  padding-top:10px;
}

H5 {
  margin-bottom: 5px;
  margin-top:5px;
}
.udPad{
  padding-top: 15px;
  padding-bottom: 5px;
  padding-left: 0px;
  padding-right: 0px;
}

.cbPad{
  padding-left: 2px;
}

.marFS{
    margin: 5px 25px 5px 25px;
}

.footerTitle2 {
  color: white;
  font-size: 11px;
}

.footerTitle {
  margin-top: 5px;
  margin-bottom: 5px;
  color: white;
  font-size: 12px;
}

.footerLink {
  color: #989896 !important;
  font-size: 11px !important;
}

footer ul {
  padding:0px;
  margin-right:0px;
  margin-left:0px;
}

.marginIn {
  margin-left:0;
  margin-right:0;
}

#myFooter {
  margin-top: 5px;
  padding-top:2px;
  background-color: #333;
  text-align: center;
}

#secondFooter {
  padding-top: 5px;
  background-color: #3e3e3e;
  text-align: center;
}

#navFix{
	margin-bottom: 0px;
	padding-top: 10px;
}

#navbar-main-collapse ul {
  padding-left:0px;
  margin-left: 0px;
}

.btn-default {
  margin-right: 5px;
}

.mapContainer {
    position: relative;
    width: 100%;
    height: 100%;
    padding-bottom: 150%; /* Ratio 16:9 ( 100%/16*9 = 56.25% ) */
	margin-bottom: 10px;
}
.pzero {
  padding: 0px;
}

#map-canvas{
    position: absolute;
    top: 15px;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0;
    padding: 0;
}

.coolContent{
	width:100%;
	height:100%;
}

.difFix{
	padding-top: 2px;
}

.disFix{
	padding-top: 4px;
}

.coolContent > p{
	font-size: 13px;
	color: #333;
}

.coolContent > * {
    float:left;
    margin-right:5px;
}

.coolContent {
    *zoom:1 /* for IE */
}

.coolContent:before,
.coolContent:after {
    content: " ";
    display: table;
}

.coolContent:after {
    clear: both;
}

.hikeName{
	text-decoration: none;
	font-size: 16px;
	color: black;
	font-weight: bold;
}

.headContent{
	margin-top: 10px;
}

.header1{
background: url(../img/blur.jpg);
background-repeat: no-repeat;
/*background-size: 100% 100%;*/
background-size: cover;
width:100%;
height: 100%;
padding-top: 7%;
padding-bottom: 5%;
justify-content: center;
align-content: center;
}

.nav-tabs {
    margin: 0;
    padding: 0;
    border: 0;    
}

.nav-tabs > li > a {
    padding:9px 15px;
            display:inline-block;
            border-radius:3px 3px 0px 0px;
            background:#7FB5DA;
            font-size:16px;
            font-weight:600;
            color:#4c4c4c;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover {
   background:#a7cce5;
   text-decoration:none;
}

/* Tab Content */
.tab-pane {
    border-radius: 0;
    padding: 10px;
}

body {
}

/*fixed top nav*/
.dropdown-large {
  /*position: static !important;*/
}
.dropdown-menu-large {
  margin-left: 16px;
  margin-right: 16px;
  padding: 20px 0px;
}
.dropdown-menu-large > li > ul {
  padding: 0;
  margin: 0;
}
.dropdown-menu-large > li > ul > li {
  list-style: none;
}
.dropdown-menu-large > li > ul > li > a {
  display: block;
  padding: 3px 20px;
  clear: both;
  font-weight: normal;
  line-height: 1.428571429;
  color: #333333;
  white-space: normal;
}
.dropdown-menu-large > li ul > li > a:hover,
.dropdown-menu-large > li ul > li > a:focus {
  text-decoration: none;
  color: #262626;
  background-color: #f5f5f5;
}
.dropdown-menu-large .disabled > a,
.dropdown-menu-large .disabled > a:hover,
.dropdown-menu-large .disabled > a:focus {
  color: #999999;
}
.dropdown-menu-large .disabled > a:hover,
.dropdown-menu-large .disabled > a:focus {
  text-decoration: none;
  background-color: transparent;
  background-image: none;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
  cursor: not-allowed;
}
.dropdown-menu-large .dropdown-header {
  color: #428bca;
  font-size: 18px;
}
@media (max-width: 768px) {
  .dropdown-menu-large {
    margin-left: 0 ;
    margin-right: 0 ;
  }
  .dropdown-menu-large > li {
    margin-bottom: 30px;
  }
  .dropdown-menu-large > li:last-child {
    margin-bottom: 0;
  }
  .dropdown-menu-large .dropdown-header {
    padding: 3px 15px !important;
  }
}

/*end fixed top nav*/

#nav.affix {
    position: fixed;
    top: 0;
    width: 100%
}


#masthead {
	min-height:150px;
	background-color:#929291;
  	color:#585857;
}

#masthead h1 {
	font-size: 5.5em;
	text-shadow: 1px 1px 2px rgb(50, 50, 50);
	line-height: 1;
	color: white;
	margin-top: -2px;
}

#masthead .well {
	margin-top:25%;
	background-color:#848584;
  	border-color:#585857;
}

.icon-bar {
	background-color:#fff;
}

/* hide sidebar sub menus by default */
#sidebar.nav .nav {
	display: none;
    font-size:12px;
}

/* show sub menu when parent is active */
#sidebar.nav>.active>ul {
	display: block;
}

.navbar-bright {
	/*background-color:#D7D7D7;*/
	background-color: #353E46;
    color:#fff;
}
  
.navbar-bright a, #masthead a, #masthead .lead {
  	color:#989896;
}

.navbar-bright li > a:hover {
    background-color:#000033;
}

.affix-top,.affix{
	position: static;
}

@media screen and (min-width: 768px) {
	#masthead h1 {
		font-size: 5em;
	}
}
  
@media (min-width: 375px) {  
  .mapContainer {
    position: relative;
    width: 100%;
    height: 100%;
    padding-bottom: 130%; /* Ratio 16:9 ( 100%/16*9 = 56.25% ) */
	margin-bottom: 10px;
  }
  .pzero {
	padding: inherit;
  }
}

@media screen and (min-width: 979px) {
  #sidebar.affix-top {
    position: static;
  	margin-top:0px;
  	width:228px;
  }
  
  #sidebar.affix {
    position: fixed;
    top:70px;
    width:228px;
  }
}

#sidebar li.active {
  	border:0 #eee solid;
  	border-right-width:4px;
}
/* ... */

